Try to stop grid contents overflowing container on mobile I forget what I did

--- a/style.css
+++ b/style.css
@@ -19,15 +19,15 @@ body {
     height:600px;
     display:grid;
     grid-template-rows:repeat(6,1fr); /*This gets rid of space between display and buttons*/
-   /* grid-template-rows:(30px 1fr 1fr 1fr 1fr 1fr);*/
+   /* grid-template-rows:(30px 1fr 1fr 1fr 1fr 1fr); don't know why this didn't work*/
    grid-template-columns: repeat(4,1fr);
    grid-gap:16px;
    font-family:Arial, Helvetica, sans-serif;
 }
 
 #display {
-    padding:12px 12px 12px 12px;
-    height:90px;
+    padding:12px;
+    height:95px;
     grid-column: 1/span 4;
     grid-row:1;
     /* background-color:rgb(197, 233, 197); */
@@ -39,8 +39,7 @@ body {
     border-right: 4px solid rgb(97, 143, 97);
     border-bottom: 4px solid rgb(148, 192, 148);
     border-left: 4px solid rgb(97, 143, 97);
-    margin-right:-1px;
-    /* margin-bottom:10px; */
+    /* margin-right:-1px; */
     margin-bottom:26px;
     justify-content: space-between;
   }
@@ -48,8 +47,9 @@ body {
   #userinputdisplay {
     font-size:20px;
     color:rgb(97, 143, 97);
-    margin:0px 0px 0px 0px;
+    margin:0px;
     text-align: right;
+    line-height:1.2em;
     max-height:2.2em;
     overflow: scroll;
   }
@@ -57,14 +57,13 @@ body {
   #resultsdisplay{
     font-size:32px;
     color:red; 
-    margin: 0px 0px -5px 0px;
+    margin: 0px;
     text-align:right;
     
   }
 
   #zero {
     grid-column: 1/span 2;
-   
   }
 
 button{
